--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,7 +10,8 @@
 body {
     font-family: bold inconsolata, sans-serif;
     font-weight: 300;
-    color: #3a3a3a;
+    color: #f01010;
+    background-color: rgb(46, 45, 45);
 }
 
 /* headings and logo */
@@ -19,19 +20,19 @@ h1, h2 {
     font-family: ubuntu, sans-serif;
     text-transform: uppercase;
     letter-spacing: 3px;
-    color: rgb(0, 0, 0); 
+    color: #f01010; 
 }
 
 #logo {
     float: left;
-    font-size: 300%;
+    font-size: 350%;
     margin-left: 30px;
 }
 
 /* navigation links */
 
 #menu {
-    font-size: 110%;
+    font-size: 130%;
     letter-spacing: 4px;
 
 }
@@ -55,34 +56,48 @@ h1, h2 {
 }
 
 #menu a:hover {
-    border-bottom: 2px solid #3a3a3a;
+    border-bottom: 2px solid #f01010;
 }
 
 .active {
-    border-bottom: 2px solid #3a3a3a;
+    border-bottom: 2px solid #f01010;
 }
 
 
 /* The hero image */
-.hero-image {
-    
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/hero.image.jpg);
-    height: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+
+#hero-outer {
+    height: 900px;
+    width: 100%;
+    overflow: hidden;
     position: relative;
-  }
-  
-  /* Place text in the middle of the image */
-  .hero-text {
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-  }    
+}
+
+#cover-text, #cover-text h2 {
+    color: #fff;
+}
+
+#hero-image {
+    height: 1200px;
+    width: 100%;
+    background: url(../images/hero.image.jpg) no-repeat center center;
+
+    /* animates zoom effect on loading page */
+   animation-name: hero-zoom;
+   animation-duration: 5s;
+   animation-fill-mode: forwards;
+
+}
+/* create the level of zoom for hero image */
+
+@keyframes hero-zoom {
+    from{
+        transform: scale(1);
+    }
+    to{
+        transform: scale(1.1);
+    }
+}  
 
 /* footer */
 
@@ -104,5 +119,15 @@ footer {
     font-size: 160%;
     margin: 1%;
     padding: 5%;
-    color: #3a3a3a;
+    color: #f01010;
 }    
+
+/* section information */
+
+#main-info {
+    text-align: center;
+    font-size: 120%;
+    margin-top: 50px;
+    list-style: armenian;
+    border-bottom: 2px solid;
+}
