--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -88,9 +88,9 @@ h1, h2 {
 
     font-size: 130%;
     font-family: ubuntu, sans-serif;
-    text-transform: uppercase;
     letter-spacing: 3px;
     color: #fff;
+    text-align: center;
 
     width: 300px;
     height: 150px;
@@ -112,7 +112,7 @@ h1, h2 {
 #main-info {
     background-color: black;
     color: #fff;
-    padding: 15px 500px;
+    padding: 15px 400px;
     line-height: 1.8;
 }
 
@@ -126,7 +126,7 @@ h1, h2 {
 #info-p2 {
     background-color: black;
     color: #fff;
-    padding: 15px 500px;
+    padding: 15px 400px;
     line-height: 1.8;
 }
 
@@ -139,7 +139,7 @@ h1, h2 {
 #info-p3 {
     background-color: black;
     color: #fff;
-    padding: 15px 500px;
+    padding: 15px 400px;
     line-height: 1.8;
 }
 
@@ -184,8 +184,6 @@ footer {
 
 @media screen and (max-width: 1200px) {
     #hero-text {
-        float: left;
-        clear: both;
         left: 150px;
         position: absolute;
 
@@ -227,7 +225,7 @@ footer {
 /* For medium sized screens below 950px and below */
 
 @media screen and (max-width : 950px) {
-    #menu {
+    #nav {
         clear: left;
         float: left;
         margin-left: 30px;
@@ -235,16 +233,15 @@ footer {
         line-height: 25px;
     } 
 
-    #cover-text {
-        left: 0;
+    #hero-text {
+        left: 60px;
+
     }
 
-    #club-ethos {
-        width: 90%;
-        height: 1200px;
-        margin: 0 auto;
+    #hero-img {
+        width: 400px;
+        height: 400px;
+        object-fit: scale-down;
     }
-
-
-
+}
 
